--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="res/images/favicon.ico">
 </head>
 <body>
    <h1>Title</h1> 
+   <img src="res/images/me.png" alt="" height="100px">
 </body>
 </html>
 
