--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <title>Document</title>
     <link rel="icon" href="res/images/favicon.ico">
 </head>
+
 <body>
+
    <h1>Title</h1> 
-   <img src="res/images/me.png" alt="" height="100px">
+    <strong>Welcome to your dashboard!</strong>
+
+    <p></p>
+   <img src="res/images/me.png" alt="Teacher" height="100px">
+
 </body>
+
+<ul>
+    <li>
+        <a href="https://ois2.ut.ee/" target="_blank">OIS</a>
+    </li>
+    <li>
+        <a href="https://courses.cs.ut.ee/">Courses</a>
+    </li>
+    <li></li>
+    <li></li>
+</ul>
 </html>
 
