--- a/index.html
+++ b/index.html
@@ -11,12 +11,87 @@
 <body>
 
    <h1>Title</h1> 
+
+   <header>
     <strong>Welcome to your dashboard!</strong>
+    </header>
+
+    <section>
+        <div>
+            <img src="res/images/me.png" width="128" height="128" alt="My picture">
+        </div>
+        <div>
+            <ul>
+                <li>Your name</li>
+                <li> A date following this format dd/mm/yyyy</li>
+                <li> Software Engineering </li>
+            </ul>
+        </div>
+        <div>
+            <strong>2.65</strong>
+        </div>
+    </section>
 
     <p></p>
    <img src="res/images/me.png" alt="Teacher" height="100px">
+   <section>
+    <h1>Courses</h1>
+    <table border="1">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Course Title</th>
+            <th>Semester</th>
+            <th>Grade</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Agile software development</td>
+            <td>fall</td>
+            <td>82</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td> Systems modelling </td>
+            <td>fall</td>
+            <td>85</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td> Requirements Engineering </td>
+            <td>fall</td>
+            <td>99</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td> Human Computer Interaction </td>
+            <td>fall</td>
+            <td>65</td>
+        </tr>
+        </tbody>
+    </table>
+</section>
 
-</body>
+<form action= "/page.php" method="get">  
+<label for="CourseTitle">Course Title: </label><br>   
+<input type="text" name="CourseTitle"><br> 
+
+<label for="semester">Semester:</label>
+<br>
+<select name="semester" id="semester">
+  <option value="fall">Fall</option>
+  <option value="spring">Spring</option>
+</select>
+
+<h4>Attendance:</h4>
+<form action= "/page.php" method="get"> 
+    <input type="radio" name="Visual">
+    <label for="Visual">Visual attendance </label><br>
+    <input type="radio" name="Physical">
+    <label for="Visual">Physical attendance </label><br>
+    
 
 <ul>
     <li>
@@ -25,8 +100,7 @@
     <li>
         <a href="https://courses.cs.ut.ee/">Courses</a>
     </li>
-    <li></li>
-    <li></li>
+    
 </ul>
 </html>
 
